# g4_shield

./: CMakeLists.txt  README.md  main.cc  run2.mac  vis.mac
.cache/clangd/index/: ActionInitialization.cc.37E975AC8C9F8710.idx  ActionInitialization.hh.35BEF07D6A431C94.idx  DetectorConstruction.cc.B16F6D2E5CBDC2B2.idx  DetectorConstruction.hh.BD46D7A87139088E.idx  EventAction.cc.A919C1A31EEC6E57.idx  EventAction.hh.66899F5612F3DD3F.idx  PrimaryGeneratorAction.cc.99FABD9C5557170C.idx  PrimaryGeneratorAction.hh.94E623278EC6AA32.idx  RunAction.cc.F3D99878549A933B.idx  RunAction.hh.D3E597F9863D9A67.idx  SteppingAction.cc.1D80F59D41D036B4.idx  SteppingAction.hh.45222B578F158CD9.idx  main.cc.6F978AB3C8F61DB9.idx
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
rt/: output_target0.root  output_target1.root
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
